<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ThugBird</string>
    <string name="title_activity_main">Thug Bird</string>
    <string name="score">$</string>
    <string name="highScore">High Score: </string>
    <string name="busted">Busted!</string>
    <string name="tryAgain">Try Again!</string>
    <string name="paused">Paused</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bird_color">BirdColor</string>
    <string name="Pause_hint">Pause</string>
    <string name="PrefsName">ThugBird</string>
    <string name="colorSaved">ThugBird color saved.</string>
    <string name="hueKey">hue</string>
    <string name="satKey">sat</string>
    <string name="maxScoreKey">maxScore</string>
    <string name="changeColor">Change Color</string>
    <string name="startGame">Play game</string>
    <string name="hueText">Hue</string>
    <string name="satText">Saturation</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="pictureFrame">Picture Frame</string>
    <string name="thugFont">fonts/RosewoodStd-Regular.otf</string>
    <string name="title_activity_bird_chooser">BirdChooserActivity</string>

    <!-- Actions -->
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_save">Save</string>

    <!-- Other strings -->
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>
    <string name="title_template_step">titulo</string>
    <string name="bird_name">bird</string>
    <string name="chooseyoutthug">Back to Play</string>
    <string name="thugColor">thugColor</string>
    <string name="chooseYour">Choose your thug</string>

</resources>
