<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">
    </FrameLayout>
    <RelativeLayout
        android:id="@+id/mainPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txtScore"
            android:layout_gravity="left|top"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:paddingStart="10dp"
            android:padding="15dp"
            android:textColorLink="#ffffffff"
            android:textColorHint="#ffffffff"
            android:textColorHighlight="#ffffffff"
            android:textColor="#ffffffff"
            android:text="@string/score" />
        <Button
            android:text="@string/pause"
            android:id="@+id/btnPause"
            android:shadowDy="5"
            android:shadowDx="5"
            android:shadowColor="#FF000000"
            android:shadowRadius="5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right|top"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="#64c3c3c3"
            android:textColor="#ffffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColorHighlight="#ffc3c3c3"
            android:singleLine="false"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#ffc3c3c3"
            android:textColorLink="#ffc3c3c3"
            android:paddingBottom="4dp"
            android:layout_alignParentStart="false">
        </Button>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/highScore"
            android:id="@+id/txtHighScore"
            android:layout_gravity="left|bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:padding="15dp"
            android:textColor="#ffffffff"
            android:textColorHighlight="#ffffffff"
            android:textColorHint="#ffffffff"
            android:textColorLink="#ffffffff" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/paused"
        android:id="@+id/txtPaused"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:shadowColor="#ff000000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:textColor="#ffffffff"
        android:textSize="50sp"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <RelativeLayout
        android:id="@+id/gameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/busted"
            android:id="@+id/txtGameOver"
            android:shadowDy="5"
            android:shadowDx="5"
            android:shadowColor="#FF000000"
            android:shadowRadius="5"
            android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textColor="#ffff3c00"
            android:textSize="50sp"
            android:textStyle="bold" />
        <Button
            android:text="@string/tryAgain"
            android:id="@+id/btnTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            android:alpha="99"
            android:shadowDy="5"
            android:shadowDx="5"
            android:shadowColor="#FF000000"
            android:shadowRadius="5"
            android:layout_below="@+id/txtGameOver"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:background="#ff3166b5"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:textSize="20sp">
        </Button>
    </RelativeLayout>
</RelativeLayout>